--- a/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
+++ b/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
@@ -46,7 +46,7 @@
     
       <div>
             <label for="customerId">Customer ID:</label>
-            <input  id="customerId" name="CustomerId" value="@id"> 
+            <input disabled="disabled" id="customerId" name="CustomerId" value="@id"> 
         </div>
     
     <div>
