--- a/WebApplication3/Views/ManageCalls/EditCalls.cshtml
+++ b/WebApplication3/Views/ManageCalls/EditCalls.cshtml
@@ -41,12 +41,12 @@
 
     <div>
         <label for="callId">Call ID:</label>
-        <input disabled="disabled" id="callId" name="CallId" value="@id">
+        <input type="hidden" id="callId" name="CallId" value="@id">
     </div>
 
     <div>
         <label for="customerId">Customer ID:</label>
-        <input  disabled="disabled"id="customerId" name="CustomerId" value="@call.CustomerId">
+        <input  type="hidden" id="customerId" name="CustomerId" value="@call.CustomerId">
     </div>
 
     <div>
