--- a/WebApplication3/Views/ManageCustomers/Customers.cshtml
+++ b/WebApplication3/Views/ManageCustomers/Customers.cshtml
@@ -59,7 +59,7 @@
 
 @if (customers != null && customers.Any())
 {
-    <a class="btn " href="/">Add New Customer</a>
+    <a class="btn " href="/add-customer">Add New Customer</a>
    <table class="table">
        <thead>
            <tr>
