--- a/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
+++ b/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
@@ -45,8 +45,8 @@
 <form id="customerForm">
     
       <div>
-            <label for="customerId">Customer ID:</label>
-            <input disabled="disabled" id="customerId" name="CustomerId" value="@id"> 
+        
+            <input type="hidden" id="customerId" name="CustomerId" value="@id"> 
         </div>
     
     <div>
