--- a/WebApplication3/Views/ManageCalls/CustomerCalls.cshtml
+++ b/WebApplication3/Views/ManageCalls/CustomerCalls.cshtml
@@ -55,10 +55,10 @@
    
 <h2>Manage Calls</h2>
 
-<a href="/dashboard">Back to DashBoard</a>
 
+<a href="/dashboard">Back to DashBoard</a>
 @if (calls != null && calls.Any())
-{<a class="btn " href="/">Add New Customer</a>
+{<a class="btn " href="/add-call">Add New Call</a>
    <table class="table">
        <thead>
            <tr>
@@ -78,11 +78,12 @@
                <td>@call.DateOfCall</td>
                <td>@call.TimeOfCall</td>
                <td>@call.Subject</td>
-               <td>@call.Description)</td>
+               <td>@call.Description</td>
                <td>
                    @Html.ActionLink("Edit", "EditCalls", new { id = call.CallId }) |
                    @Html.ActionLink("Delete", "DeleteCall", new { id = call.CallId }, new { onclick = "return confirm('Are you sure you want to delete this Call?');" })
-               </td>
+                    
+              </td>
            </tr>
        }
        </tbody>
