--- a/WebApplication3/Views/Report/Reports.cshtml
+++ b/WebApplication3/Views/Report/Reports.cshtml
@@ -1,19 +1,25 @@
-@page
+
 @model WebApplication3.Views.Reports.Reports
 
-@{
-    Layout = null;
-}
+<style>
+      .btn {
+            display: inline-block;
+            padding: 15px; /* Adjust the padding to make it larger or smaller */
+            margin: 10px; /* Adjust the margin for spacing between links */
+            background-color: #3498db; /* Set the background color */
+            color: #fff; /* Set the text color */
+            text-decoration: none; /* Remove the default underline */
+            border-radius: 10px; /* Add rounded corners */
+            font-size: 18px; /* Set the font size */
+            }
+    
+      
+        .btn:nth-child(2) {
+            background-color: #e74c3c; /* Change the background color for the second link */
+        }
+</style>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title></title>
-</head>
-<body>
 <div>
-    <a href="@Url.Action("ExportReport", "Report")">Generate Report</a>
+    <a href="/dashboard">Back to DashBoard</a>
+    <a class="btn " href="@Url.Action("ExportReport", "Report")">Generate Report</a>
 </div>
-</body>
-</html>
