--- a/WebApplication3/Views/ManageCalls/AddCall.cshtml
+++ b/WebApplication3/Views/ManageCalls/AddCall.cshtml
@@ -21,14 +21,14 @@
 <header>
     <!-- Your header code remains unchanged -->
 </header>
-<a href="/CustomerCalls">Back to Calls</a>
-<h2>Call Form</h2>
 
+<h2>Call Form</h2>
+<a href="/CustomerCalls">Back to Calls</a>
 <form id="callForm">
     <div>
         <label for="customerId">Customer ID:</label>
         <input  id="customerId" name="CustomerId" value="@customerId">
-        <small>You didn't specify how do you want the relation between call/Customer in order to create new call ex (unique name)</small>
+        <small>You didn't specify how you want the relationship between a call and a customer to be defined in order to create a new call (e.g., unique name).</small>
     </div>
 
     <div>
