--- a/WebApplication3/Views/ManageCalls/EditCalls.cshtml
+++ b/WebApplication3/Views/ManageCalls/EditCalls.cshtml
@@ -36,16 +36,16 @@
 </header>
 
 <h2>Call Form</h2>
-
+<a href="/CustomerCalls">Back to Calls</a>
 <form id="callForm">
 
     <div>
-        <label for="callId">Call ID:</label>
+      
         <input type="hidden" id="callId" name="CallId" value="@id">
     </div>
 
     <div>
-        <label for="customerId">Customer ID:</label>
+       
         <input  type="hidden" id="customerId" name="CustomerId" value="@call.CustomerId">
     </div>
 
