--- a/WebApplication3/Views/ManageCustomers/AddCustomer.cshtml
+++ b/WebApplication3/Views/ManageCustomers/AddCustomer.cshtml
@@ -24,7 +24,8 @@
 </header>
 
 <h2>Customer Form</h2>
-
+<a href="/customers">Back to Customers</a>
+<br>
 <form id="customerForm">
     <div>
         <!-- Customer ID is not needed for adding a new customer -->
