--- a/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
+++ b/WebApplication3/Views/ManageCustomers/EditCustomers.cshtml
@@ -41,7 +41,8 @@
     </nav>
 </header>
 <h2>Customer Form</h2>
-
+<a href="/customers">Back to Customers</a>
+<br>
 <form id="customerForm">
     
       <div>
